--- a/static/style.css
+++ b/static/style.css
@@ -1,7 +1,17 @@
+html, body {
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+}
+
 body {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
     font-family: Arial, sans-serif;
-    text-align: center;
-    margin-top: 50px;
 }
 
 input, button {
@@ -21,8 +31,7 @@ button {
 
 #cy {
     width: 100%;
-    height: 600px;
-    margin: 20px auto;
+    height: 80%;
     border: 1px solid #ccc;
-    display: block;
+    box-sizing: border-box;
 }
