--- a/static/style.css
+++ b/static/style.css
@@ -35,3 +35,11 @@ button {
     border: 1px solid #ccc;
     box-sizing: border-box;
 }
+
+#contextMenu {
+    position: absolute;
+    background: white;
+    border: 1px solid #ccc;
+    padding: 10px;
+    display: none;
+}
