--- a/static/style.css
+++ b/static/style.css
@@ -14,14 +14,27 @@ body {
     font-family: Arial, sans-serif;
 }
 
-input, button {
-    margin: 10px;
+#controls {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 20px;
+}
+
+#controls input {
+    margin: 0 10px;
     padding: 10px;
     font-size: 16px;
 }
 
-button {
+#controls button {
+    margin: 0 10px;
+    padding: 10px;
+    background: none;
+    border: none;
     cursor: pointer;
+    font-size: 24px; /* Adjust size as needed */
+    color: #0074D9; /* Adjust color as needed */
 }
 
 #content {
@@ -38,8 +51,36 @@ button {
 
 #contextMenu {
     position: absolute;
-    background: white;
+    background: rgba(255, 255, 255, 0.9);
     border: 1px solid #ccc;
-    padding: 10px;
+    border-radius: 5px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    padding: 1px;
     display: none;
+    z-index: 1000;
+}
+
+#contextMenu button {
+    background: #0074D9;
+    color: #fff;
+    border: none;
+    padding: 10px 15px;
+    margin: 5px 0;
+    border-radius: 3px;
+    cursor: pointer;
+    font-size: 14px;
+    width: 100%;
+}
+
+#contextMenu button:hover {
+    background: #005bb5;
+}
+
+#contextMenu.show {
+    display: block;
+}
+
+.node-highlight {
+    border: 3px solid #ff4136;
+    border-radius: 50%;
 }
